Обновление лабораторной работы: добавлен вывод градиента

--- a/lab-linear-regression.ipynb
+++ b/lab-linear-regression.ipynb
@@ -16,7 +16,15 @@
     "Продолжить формулу для взятия векторной производной по х для функции квадрата ошибки <br>(в красивом формате со всеми значками угловых скобок, операторов и т. д.). После выполнения этого вы вспомните формулу градиента для квадратичной ошибки и поймете как писать формулы на языке математической верстки TeX\n",
     "\n",
     "$$ f(x) = ||Ax-y||^2 = (Ax-y)^T(Ax-y) $$\n",
-    "$$ D_f(x) = D<(Ax-y)^T(Ax-y)> = 2(Ax-y)^TAdx$$\n",
+    "$$ D_f(x) = d<(Ax-y)^T(Ax-y)> = $$\n",
+    "$$ =<d(Ax-y), (Ax-y)> + <(Ax-y), d(Ax-y)>= $$ \n",
+    "$$ =2<(Ax-y, d(Ax-y))>= $$\n",
+    "$$ =2<(Ax-y), Adx>= $$\n",
+    "$$ =2(Ax-y)^TAdx= $$\n",
+    "$$ =2\\left( \\left( (A x - y)^T A \\right)^T \\right)^T dx = $$\n",
+    "$$ =2(A^T(Ax-y))^Tdx=$$\n",
+    "$$ D_f(x) =<2A^T(Ax - y), dx> $$\n",
+    "$$ D_f(x) = <\\nabla f(x) , dx> =>$$\n",
     "$$ \\nabla f(x) = 2A^T(Ax-y) $$\n"
    ]
   },
